--- a/Italian/main/Backup.apk/res/values-it/strings.xml
+++ b/Italian/main/Backup.apk/res/values-it/strings.xml
@@ -12,7 +12,7 @@
     <string name="backup_failed">Backup fallito, riprovare</string>
     <string name="backup_recently">" (Ultimo)"</string>
     <string name="sdcard_unmounted">SD Card non trovata o non montata!</string>
-    <string name="backup_progress">Creazione backup in corso..</string>
+    <string name="backup_progress">Creazione backup in corso…</string>
     <string name="button_ok">Ok</string>
     <string name="button_continue">Continua</string>
     <string name="backup_finished">Backup completato</string>
@@ -76,7 +76,7 @@
     <string name="task_failed">Fallito</string>
     <string name="task_canceled_local">Il processo è stato annullato al %1$s</string>
     <string name="task_canceled_all_local">Annulla processo</string>
-    <string name="task_failed_local">Il processo ha incontrato un errore al %1$s</string>
+    <string name="task_failed_local">Il processo ha riscontrato un errore al %1$s</string>
     <string name="task_failed_all_local">Processo fallito</string>
     <string name="task_backup_finished_local">Backup completato</string>
     <string name="task_restore_finished_local">Ripristino completato</string>
@@ -118,7 +118,7 @@
     <string name="progress_backup_hint">Backup in corso…</string>
     <string name="cancel_backup">Annulla Backup</string>
     <string name="restore_contact">Ripristino contatti</string>
-    <string name="restore_contact_content">"Il ripristino contatti potrebbe produrre dei duplicati, sicuro di voler procedere?.Nota: Puoi verificare la presenza di duplicati nella lista contatti"</string>
+    <string name="restore_contact_content">"Il ripristino contatti potrebbe produrre dei duplicati, sicuro di voler procedere? Nota: Puoi verificare la presenza di duplicati nella lista contatti"</string>
     <string name="progress_restore_hint">Ripristino in corso…</string>
     <string name="cancel_restore">Annulla ripristino</string>
     <string name="restore_failed">Ripristino fallito!</string>
