--- a/Italian/main/Browser.apk/res/values-it/strings.xml
+++ b/Italian/main/Browser.apk/res/values-it/strings.xml
@@ -59,7 +59,7 @@
     <string name="miui_content_web_search">Cerca</string>
     <string name="miui_content_share">Condividi</string>
     <string name="miuichromium_default_text_encoding">Latin-1</string>
-    <string name="miuichromium_save_password_message">Vuoi che iil browser memorizzi questa password?</string>
+    <string name="miuichromium_save_password_message">Vuoi che il browser memorizzi questa password?</string>
     <string name="miuichromium_save_password_notnow">Non adesso</string>
     <string name="miuichromium_save_password_remember">Memorizza</string>
     <string name="miuichromium_save_password_never">Mai</string>
@@ -198,7 +198,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_volume_key_enabled">Tasti volume</string>
     <string name="pref_volume_key_operation">Funzione tasti volume</string>
     <string name="pref_gesture_title">Gesti</string>
-    <string name="pref_fling_on_border_enabled">"Swipe dal bordo"</string>
+    <string name="pref_fling_on_border_enabled">Swipe dal bordo</string>
     <string name="pref_fling_on_border_enabled_title_summary">Esegui swipe dal bordo sinistro o destro dello schermo per cambiare scheda</string>
     <string name="is_page_top">"Sei all'inizio della pagina"</string>
     <string name="is_page_bottom">Hai raggiunto la fine della pagina</string>
@@ -275,7 +275,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="too_many_windows_dialog_message">Impossibile aprire una nuova scheda finché non se ne chiude una.</string>
     <string name="max_tabs_warning">"Nessun'altra scheda disponibile"</string>
     <string name="notif_install_successful">Download completato</string>
-    <string name="in_incognito">"Ora sei in incognito! Le pagine web che visualizza in questa scheda non appariranno nella cronologia del browser."</string>
+    <string name="in_incognito">"Ora sei in incognito! Le pagine web che visualizzi in questa scheda non appariranno nella cronologia del browser."</string>
     <string name="alert_tips">Questo sito potrebbe essere un rischio per la sicurezza</string>
     <string name="stop_loading">Ferma</string>
     <string name="close_all_tab_alert_title">Chiudi tutte le schede</string>
@@ -544,7 +544,7 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="menu_save_snapshot">Salva per lettura offline</string>
     <string name="saving_snapshot">Salvataggio…</string>
     <string name="snapshot_failed">Salvataggio per lettura offline non riuscito.</string>
-    <string name="snapshot_successed">Save for offline reading successed</string>   
+    <string name="snapshot_successed">Salvataggio per lettura offline riuscito.</string>   
     <string name="contextmenu_openlink">Apri</string>
     <string name="contextmenu_savelink">Salva link</string>
     <string name="contextmenu_sharelink">Condividi link</string>
@@ -626,8 +626,8 @@ Sei sicuro di voler uscire da questa pagina?"</string>
     <string name="pref_privacy_clear_geolocation_access_summary">"Cancella l'accesso alla posizione per tutti i siti web"</string>
     <string name="pref_privacy_clear_geolocation_access_dlg">"Cancellare l'accesso del sito web alla posizione?"</string>
     <string name="pref_security_passwords_title">Password</string>
-    <string name="pref_security_remember_passwords">Memorizza le password</string>
-    <string name="pref_security_remember_passwords_summary">Salva nomi utente e password per i siti web</string>
+    <string name="pref_security_remember_passwords">Memorizza le passwords</string>
+    <string name="pref_security_remember_passwords_summary">Salva nomi utente e passwords per i siti web</string>
     <string name="pref_security_save_form_data">Memorizza dati moduli</string>
     <string name="pref_security_save_form_data_summary">Memorizza i dati che digito nei moduli per usi futuri</string>
     <string name="pref_security_show_security_warning">Mostra avvisi sicurezza</string>
