--- a/Italian/main/BugReport.apk/res/values-it/strings.xml
+++ b/Italian/main/BugReport.apk/res/values-it/strings.xml
@@ -77,7 +77,7 @@
     <string name="camera_problem3">Chiusura forzata Fotocamera</string>
     <string name="camera_problem4">Impossibile cambiare tra fotocamera frontale a posteriore</string>
     <string name="camera_problem5">La fotocamera ha smesso di funzionare</string>
-    <string name="suggestion_problem1">DOvreste aggiungere questa funzione perchè…</string>
+    <string name="suggestion_problem1">Dovreste aggiungere questa funzione perchè…</string>
     <string name="screen_lock">Lockscreen</string>
     <string name="systemui">Pannello delle notifiche</string>
 </resources>
