--- a/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/MiuiCamera.apk/res/values-it/strings.xml
@@ -616,7 +616,7 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_multiple_face_beauty_values_off">off</string>
     <string name="pref_camera_multiple_face_beauty_values_on">on</string>
     <string name="measure_whitebalance_button">Misura</string>
-    <string name="measure_whitebalance_text">"Posiziona un foglio bianco o grigio davanti all'obbiettivo e premi il tasto"</string>
+    <string name="measure_whitebalance_text">"Posiziona un foglio bianco o grigio davanti all'obiettivo e premi il tasto"</string>
     <string name="pref_camera_hdr_type_title">Tipo di HDR</string>
     <string name="pref_camera_hdr_type_entry_normal">Normale</string>
     <string name="pref_camera_hdr_type_entry_live">Live</string>
