--- a/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
+++ b/Italian/device/mocha/MiuiCamera.apk/res/values-it/strings.xml
@@ -495,7 +495,7 @@ ed esci dall'inquadratura"</string>
     <string name="pref_camera_multiple_face_beauty_entry_on">Due visi</string>
 	<string name="pref_face_beauty_title">Reg.viso</string>
     <string name="measure_whitebalance_button">Misura</string>
-    <string name="measure_whitebalance_text">"Posiziona un foglio bianco o grigio davanti all'obbiettivo e premi il tasto"</string>
+    <string name="measure_whitebalance_text">"Posiziona un foglio bianco o grigio davanti all'obiettivo e premi il tasto"</string>
     <string name="pref_camera_hdr_type_title">Tipo di HDR</string>
     <string name="pref_camera_hdr_type_entry_normal">Normale</string>
     <string name="pref_camera_hdr_type_entry_live">Live</string>
