--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -2176,15 +2176,15 @@ Qualsiasi utente può accettare le autorizzazioni delle applicazioni aggiornate 
     <string name="launcher_settings_title">Launcher</string>
     <string name="screen_timeout_title">Disattivazione schermo</string>
     <string name="touch_title">Touch</string>
-    <string name="touch_sensitive_title">Modalità guantyi</string>
-    <string name="touch_sensitive_summary">"Rende lo schermo touch paticolarmente sensibile consentendone l'uso mentre indossi dei guanti"</string>
+    <string name="touch_sensitive_title">Modalità guanti</string>
+    <string name="touch_sensitive_summary">"Rende lo schermo touch particolarmente sensibile consentendone l'uso mentre indossi dei guanti"</string>
     <string name="touch_sensitive_turn_off_title">Modailtà guanti disattivata</string>
     <string name="touch_sensitive_turn_off_summary">Disabilitare anche Prevenzione chiamate dalla tasca?</string>
     <string name="touch_sensitive_turn_off_confirm">OK</string>
     <string name="touch_sensitive_turn_off_cancel">Annulla</string>
     <string name="screen_never_timeout_title">Non disattivare mai</string>
     <string name="screen_on_proximity_sensor_title">Prevenzione chiamate dalla tasca</string>
-    <string name="screen_on_proximity_sensor_summary">Il dispositivo si bloccherà automaticaqmente quando riposto in una tasca</string>
+    <string name="screen_on_proximity_sensor_summary">Il dispositivo si bloccherà automaticamente quando riposto in una tasca</string>
     <string name="preferred_launcher_title">Launcher preferito</string>
     <string name="preferred_application_title">Preferito %s</string>
     <string name="preferred_application_warning_title">Sostituisci il predefinito %s</string>
