--- a/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
+++ b/Italian/main/MiuiSystemUI.apk/res/values-it/strings.xml
@@ -110,7 +110,7 @@
     <string name="status_bar_toggle_torch">Torcia</string>
     <string name="status_bar_toggle_vibrate">Vibra</string>
     <string name="status_bar_toggle_wifi">Wi-Fi</string>
-    <string name="status_bar_toggle_power_mode">Alimentazione</string>
+    <string name="status_bar_toggle_power_mode">Alimentaz.</string>
     <string name="status_bar_toggle_drive_mode">Guida</string>
     <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
     <string name="status_bar_toggle_quiet_mode">Anti-disturbo</string>
